--- a/src/assets/css/blocks/select-phone.scss
+++ b/src/assets/css/blocks/select-phone.scss
@@ -107,7 +107,7 @@
         cursor: pointer;
 
         a {
-            font-family: Montserrat;
+            font-family: "Montserrat", sans-serif;
             font-weight: 600;
             font-size: 1.4rem;
             line-height: 17/14*1;
