--- a/php/layout/head.phtml
+++ b/php/layout/head.phtml
@@ -5,7 +5,7 @@
 <meta name="description" content="<?= $this->escape($variables['meta']['description']) ?>">
 <meta name="keywords" content="<?= $this->escape($variables['meta']['keywords']) ?>">
 
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&amp;display=swap" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/pstpn-webfont-montserrat@0.0.5/montserrat.css" rel="stylesheet">
 
 
 <?= $this->macros('content', 'includeFrontendResources') ?>
