--- a/src/assets/css/blocks/sections/product.scss
+++ b/src/assets/css/blocks/sections/product.scss
@@ -131,7 +131,6 @@
             color: #676767;
             margin-bottom: 0.7rem;
             font-weight: 400;
-            width: 100%;
             &Name {
                 width: 85px;
             }
@@ -846,6 +845,11 @@
     height: auto;
     background: #fff;
     align-items: baseline;
+    .article {
+        max-width: 100%;
+        padding: 0 13%;
+        margin: 0;
+    }
     &_flex {
         display: flex;
         div {
