--- a/php/content/pools/offer.phtml
+++ b/php/content/pools/offer.phtml
@@ -72,7 +72,7 @@
       <p>КОММЕРЧЕСКОЕ ПРЕДЛОЖЕНИЕ</p>
       <img src="dist/assets/images/aquabioraphy_title.svg" alt="">
       <h4><?= $model['name'] ?> <span><?=$model['number']?></span></h4>
-      <a class="btn btn--primary"><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <a class="btn btn--primary pdf"><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
           <g clip-path="url(#clip0)">
             <path d="M14.3333 12H12.3333C12.1493 12 12 11.8507 12 11.6667C12 11.4827 12.1493 11.3333 12.3333 11.3333H14.3333C14.8847 11.3333 15.3333 10.8847 15.3333 10.3333V5.66667C15.3333 5.11533 14.8847 4.66667 14.3333 4.66667H1.66667C1.11533 4.66667 0.666667 5.11533 0.666667 5.66667V10.3333C0.666667 10.8847 1.11533 11.3333 1.66667 11.3333H3.66667C3.85067 11.3333 4 11.4827 4 11.6667C4 11.8507 3.85067 12 3.66667 12H1.66667C0.747333 12 0 11.252 0 10.3333V5.66667C0 4.748 0.747333 4 1.66667 4H14.3333C15.2527 4 16 4.748 16 5.66667V10.3333C16 11.252 15.2527 12 14.3333 12Z" fill="white" />
             <path d="M9.66732 14H5.66732C5.48332 14 5.33398 13.8506 5.33398 13.6666C5.33398 13.4826 5.48332 13.3333 5.66732 13.3333H9.66732C9.85132 13.3333 10.0007 13.4826 10.0007 13.6666C10.0007 13.8506 9.85132 14 9.66732 14Z" fill="white" />
